# Quick-Capture

./: .env.example  README.md  ai_handler.py  main.py  pyproject.toml  result_window.py  selection_box.py
